[tool.poetry]
name = "fastapi-user-auth"
version = "0.1.2"
description = ""
authors = ["Kostiantyn <lynx87@ukr.net>"]
readme = "README.md"
packages = [{include = "fastapi_user_auth"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
libgravatar = "^1.0.4"
psycopg2-binary = "^2.9.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
